--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -21,6 +21,11 @@
         visibility: hidden;
       }
     }
+    &.paused{
+      &::-webkit-media-controls-overlay-play-button {
+        display: none;
+      }
+    }
   }
   &__play{
     position: absolute;
